--- a/src/global.scss
+++ b/src/global.scss
@@ -27,6 +27,10 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap");
 
+@import "swiper/scss";
+@import "swiper/scss/pagination";
+@import "swiper/scss/navigation";
+
 /**
  * Ionic Dark Mode
  * -----------------------------------------------------
