--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
   <main>
     <nav>
       <div class="menu">
-        <div class="menu__icon"></div>
+        <div class="menu__icon"><i class="fa-solid fa-bars"></i></div>
         <span class="menu__span" data-color="primary-color"
           >&#64;delacruzjimmy</span
         >
