--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -84,8 +84,9 @@ ion-content {
       -webkit-backdrop-filter: blur(0.25rem);
 
       .menu {
-        // &__icon {
-        // }
+        &__icon {
+          visibility: hidden;
+        }
 
         &__span {
           font-weight: bold;
@@ -1242,6 +1243,602 @@ ion-content {
           //     }
           //   }
           // }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  ion-content {
+    main {
+      scrollbar-width: auto; /* Firefox */
+      min-height: 100vh;
+      scroll-snap-type: none;
+
+      nav {
+        padding: 1rem;
+
+        .menu {
+          &__icon {
+            visibility: visible;
+            cursor: pointer;
+
+            i {
+              font-size: 1.25rem;
+              color: var(--primary-color);
+              transition: 0.3s;
+            }
+          }
+
+          &__span {
+            visibility: hidden;
+          }
+
+          &__sidebar {
+            button {
+              &.meteor__toggle {
+                visibility: hidden;
+              }
+            }
+          }
+        }
+      }
+
+      section {
+        .item {
+          &__header {
+            font-size: 1.75rem;
+          }
+
+          &__subheader {
+            line-height: 1.5;
+            font-size: 0.825rem;
+          }
+        }
+
+        &#hero {
+          .item {
+            width: 75%;
+
+            &__header {
+              font-size: 2rem;
+
+              span {
+                span {
+                  &:has(strong.active) {
+                    .soc__med {
+                      .soc {
+                        a {
+                          i {
+                            font-size: 1.5rem;
+                          }
+                        }
+                      }
+                    }
+                  }
+
+                  .soc__med {
+                    width: 7rem;
+
+                    .soc {
+                      width: 2.25rem;
+                    }
+                  }
+                }
+              }
+            }
+
+            &__subheader {
+              font-size: 0.875rem;
+              width: 80%;
+            }
+          }
+
+          .section__scroll {
+            span {
+              font-size: 0.75rem;
+            }
+          }
+        }
+
+        &#work {
+          display: flex;
+          flex-direction: column;
+          padding-block: 4.25rem 1rem;
+          align-items: flex-start;
+          justify-content: flex-start;
+          gap: 2rem;
+
+          .about__us {
+            flex-direction: column;
+            width: 100%;
+            position: relative;
+            gap: 1.5rem;
+            align-items: flex-start;
+            padding-inline: 0;
+            padding-bottom: 0;
+
+            .item__header {
+              span {
+                font-size: 3rem;
+              }
+            }
+
+            .body {
+              gap: 1rem;
+            }
+          }
+
+          .work__container {
+            width: 100%;
+            height: 100%;
+            gap: 4rem;
+            align-items: start;
+            justify-items: center;
+            overflow-y: scroll;
+            // padding-right: rem;
+            padding-inline: 0 5rem;
+            position: relative;
+
+            #workExperience {
+              position: absolute;
+              top: 0;
+            }
+
+            #educationExperience {
+              position: absolute;
+              top: 50%;
+            }
+
+            &::-webkit-scrollbar-track {
+              -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+              border-radius: 1rem;
+            }
+
+            &::-webkit-scrollbar {
+              width: 0.5rem;
+              background-color: transparent;
+              border-radius: 1rem;
+            }
+
+            &::-webkit-scrollbar-thumb {
+              background-color: rgba(255, 255, 255, 0.1);
+              border-radius: 1rem;
+            }
+
+            & span {
+              --font-inter: "__inter_20b187", "__inter_Fallback_20b187";
+              font-family: var(--font-inter), ui-sans-serif, system-ui,
+                -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+                "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+                "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+                "Noto Color Emoji";
+              font-weight: 600;
+            }
+
+            // .item {
+            //   position: sticky;
+            //   bottom: 0;
+            //   gap: 3rem;
+            //   align-self: flex-end;
+
+            //   .item__header {
+            //     span {
+            //       font-size: 3rem;
+            //     }
+            //   }
+
+            //   .body {
+            //     gap: 1rem;
+            //   }
+            // }
+
+            .work__list {
+              flex-direction: column;
+              gap: 1.5rem;
+
+              .header {
+                flex-direction: row;
+                width: auto;
+                padding-inline: 1rem;
+                position: sticky;
+                top: 0;
+                z-index: 2;
+                backdrop-filter: blur(1px);
+                -webkit-backdrop-filter: blur(1px);
+
+                .div {
+                  align-items: center;
+                  gap: 0.5rem;
+                  cursor: pointer;
+
+                  &:hover {
+                    span {
+                      strong {
+                        color: var(--tertiary-color);
+                      }
+                    }
+
+                    i {
+                      transform: translate(0, -0.5rem);
+                      color: var(--tertiary-color);
+                    }
+                  }
+
+                  i {
+                    font-size: 0.75rem;
+                    margin-top: 0.25rem;
+                    rotate: 45deg;
+                    transition: 0.3s;
+                  }
+                }
+              }
+
+              &:has(.work:hover) {
+                .work {
+                  &:not(:hover) {
+                    opacity: 0.5;
+                  }
+                }
+              }
+
+              .work {
+                flex-direction: row;
+                align-items: center;
+                // justify-content: space-between;
+                padding: 1rem;
+                gap: 2rem;
+                border-radius: 0.25rem;
+                overflow: hidden;
+                backdrop-filter: blur(0.25rem);
+                -webkit-backdrop-filter: blur(0.25rem);
+
+                transition: 0.1s;
+                cursor: pointer;
+
+                &:hover {
+                  background-color: rgba(30, 41, 59, 0.5);
+                  filter: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04))
+                    drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
+                  --tw-ring-offset-shadow: 0 0 #0000;
+                  --tw-ring-shadow: 0 0 #0000;
+                  --tw-shadow: inset 0 1px 0 0 rgba(148, 163, 184, 0.1);
+                  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+                    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+                }
+
+                &:not(:has(.links .link:hover)) {
+                  &:hover {
+                    .body {
+                      .details {
+                        .title {
+                          a {
+                            background-size: 200% auto;
+                            color: var(--primary-color);
+                            background-clip: text;
+                            -webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;
+                            animation: textclip 1s linear infinite;
+                            background-image: var(--linear-gradient-animate);
+                          }
+
+                          i {
+                            transform: translate(0, -0.5rem);
+                            color: var(--tertiary-color);
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+
+                .date {
+                  width: 100%;
+                  height: 100%;
+                  align-self: flex-start;
+                  max-width: 8rem;
+                  margin-block: 0.25rem;
+
+                  span {
+                    font-weight: 600;
+                    font-size: 0.75rem;
+                    line-height: 1rem;
+                    color: var(--accent-color);
+                  }
+                }
+
+                .body {
+                  flex-direction: column;
+                  gap: 1rem;
+
+                  .details {
+                    gap: 0.5rem;
+
+                    .title {
+                      flex-direction: row;
+                      align-items: center;
+                      gap: 0.5rem;
+                      font-size: 1rem;
+                      color: var(--primary-color);
+
+                      // &:has(a:hover) {
+                      //   i {
+                      //     transform: translate(0, -0.5rem);
+                      //     color: var(--tertiary-color);
+                      //   }
+                      // }
+
+                      a {
+                        text-decoration: none;
+                      }
+
+                      i {
+                        font-size: 0.75rem;
+                        margin-top: 0.25rem;
+                        rotate: 45deg;
+                        transition: 0.3s;
+                      }
+                    }
+
+                    .description {
+                      flex-direction: row;
+
+                      span {
+                        line-height: 1.5;
+                        font-size: 0.875rem;
+                        color: var(--secondary-color);
+
+                        i {
+                          color: var(--secondary-color);
+                        }
+                      }
+                    }
+                  }
+
+                  .links {
+                    flex-direction: row;
+                    gap: 1rem;
+
+                    a.link {
+                      display: flex;
+                      flex-direction: row;
+                      gap: 0.375rem;
+                      align-items: center;
+                      text-decoration: none;
+                      color: var(--primary-color);
+                      cursor: pointer;
+
+                      &:hover {
+                        i,
+                        span {
+                          color: var(--tertiary-color);
+                        }
+                      }
+
+                      i {
+                        font-size: 0.675rem;
+                        margin-top: 0.25rem;
+                      }
+
+                      span {
+                        font-weight: 600;
+                        font-size: 0.875rem;
+                        line-height: 1.25rem;
+                      }
+                    }
+                  }
+
+                  .skills {
+                    flex-direction: row;
+                    gap: 1rem;
+                    align-items: center;
+                    flex-wrap: wrap;
+
+                    .skill {
+                      font-size: 0.75rem;
+                      line-height: 1.25rem;
+                      font-weight: 500;
+                      padding: 0.25rem 0.75rem;
+                      color: rgb(94 234 212);
+                      background-color: rgba(45, 212, 191, 0.1);
+                      border-radius: 0.75rem;
+                    }
+                  }
+                }
+
+                &.education {
+                  .body {
+                    .details {
+                      .description {
+                        flex-direction: column;
+                      }
+                    }
+                  }
+                }
+              }
+
+              .scroll {
+                display: flex;
+                align-items: center;
+                width: auto;
+                // height: 8rem;
+                // justify-content: space-between;
+                position: absolute;
+                top: 50%;
+                right: 1rem;
+                gap: 2rem;
+
+                span {
+                  color: var(--primary-color);
+                  transform: rotate(90deg);
+                  text-transform: uppercase;
+                  font-size: 0.75rem;
+                }
+
+                .arrow {
+                  width: 0;
+                  height: 4.5rem;
+                  border: 1px solid var(--primary-color);
+                  position: relative;
+                  animation: scroll 1.5s infinite;
+                  -webkit-animation: scroll 1.5s infinite;
+                  &::after {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: 100%;
+                    left: -5px;
+                    width: 1px;
+                    height: 10px;
+
+                    // triangle
+                    border-top: 10px solid var(--primary-color);
+                    border-left: 5px solid transparent;
+                    border-right: 5px solid transparent;
+                  }
+                }
+
+                @keyframes scroll {
+                  0% {
+                    height: 4.5rem;
+                  }
+                  30% {
+                    height: 3rem;
+                  }
+                  60% {
+                    height: 4.5rem;
+                  }
+                }
+
+                @-webkit-keyframes scroll {
+                  0% {
+                    height: 4.5rem;
+                  }
+                  30% {
+                    height: 3rem;
+                  }
+                  60% {
+                    height: 4.5rem;
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        &#projects {
+          flex-direction: column;
+          width: 100%;
+          height: 100%;
+          padding-block: 4.25rem 2rem;
+          // padding-inline: 5rem 3rem;
+          justify-content: flex-start;
+          align-items: center;
+          scroll-snap-align: end;
+          gap: 2rem;
+
+          .section__header {
+            width: 100%;
+            align-items: center;
+
+            .title {
+              span {
+                font-size: 3rem;
+
+                strong {
+                  cursor: default;
+                }
+              }
+            }
+
+            .subtitle {
+              width: 50%;
+
+              span {
+                text-align: right;
+                font-size: 1rem;
+              }
+            }
+          }
+
+          .section__body {
+            width: 100%;
+            height: 100%;
+            gap: 4rem;
+            align-items: center;
+            // justify-items: center;
+            justify-content: center;
+            // overflow-y: scroll;
+            // scrollbar-width: none;
+            // padding-inline: 5rem 0;
+
+            .scroll {
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              width: 11rem;
+              // height: 8rem;
+              // justify-content: space-between;
+              position: absolute;
+              left: 50%;
+              // right: 4rem;
+              bottom: 1rem;
+              gap: 2rem;
+
+              span {
+                color: var(--primary-color);
+                // transform: rotate(90deg);
+                text-transform: uppercase;
+                font-size: 0.75rem;
+              }
+
+              .arrow {
+                width: 4.5rem;
+                height: 0;
+                border: 1px solid var(--primary-color);
+                position: relative;
+                animation: scroll-right 1.5s infinite;
+                -webkit-animation: scroll-right 1.5s infinite;
+                &::after {
+                  content: "";
+                  display: block;
+                  position: absolute;
+                  top: -5px;
+                  right: -5px;
+                  width: 0px;
+                  height: 0px;
+                  border-left: 10px solid var(--primary-color);
+                  border-top: 5px solid transparent;
+                  border-bottom: 5px solid transparent;
+                }
+              }
+
+              @keyframes scroll-right {
+                0% {
+                  width: 4.5rem;
+                }
+                30% {
+                  width: 6rem;
+                }
+                60% {
+                  width: 4.5rem;
+                }
+              }
+
+              @-webkit-keyframes scroll-right {
+                0% {
+                  width: 4.5rem;
+                }
+                30% {
+                  width: 6rem;
+                }
+                60% {
+                  width: 4.5rem;
+                }
+              }
+            }
+          }
         }
       }
     }
